# Model-Predictive-Control-on-Differentiable-Manifolds

./: .gitignore  Build.bat  Build.sh  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
Examples/: BicycleModel.cpp  BicycleModel.h
Include/: BicycleModel.h  Literals.h  NonLinearSolver.h  Quadcopter.h
Source/: BicycleModel.cpp  CMakeLists.txt  Quadcopter.cpp
Source/Tests/: CMakeLists.txt  Main.cpp  SolverTests.cpp  SolverTests.h
Tests/: CMakeLists.txt  SolverTests.cpp  SolverTests.h
